# restaurant_app

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: api.yml
documents/: endpoints.md
migrations/: V1__create_tables.sql  V2__create_menu_items.sql  V3__create_table_order_items.sql  V4__seed.sql
src/: client.rs  db.rs  main.rs
src/server/: handler.rs  mod.rs  table_order_items.rs
