[package]
name = "restaurant_app_assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "^0.7.7", features = ["macros"] }
tower = "^0.5.1"
serde = { version = "^1.0.210", features = ["derive"] }
tokio-postgres = "^0.7.12"
refinery = { version = "^0.8.14", features = ["tokio-postgres"]}
bb8 = "^0.8.5"
bb8-postgres = "^0.8.1"
